--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,4 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
+
 <!doctype html>
 <html lang="en">
 
@@ -94,17 +91,17 @@ Author URL: http://w3layouts.com
                 <div class="col-lg-3 col-sm-6 contact-info">
                     <i class="fas fa-map-marked-alt"></i>
                     <h4>Location</h4>
-                    <p>London, 235 Terry, 10001</p>
+                    <p>kakinada 533262</p>
                 </div>
                 <div class="col-lg-3 col-sm-6 contact-info mt-md-0 mt-4">
                     <i class="fas fa-headset"></i>
                     <h4>Phone</h4>
-                    <p><a href="tel:+44 987 654 321">+44 123 984 439</a></p>
+                    <p><a href="tel:91 8074601255">91 8074601255</a></p>
                 </div>
                 <div class="col-lg-3 col-sm-6 contact-info mt-lg-0 mt-4">
                     <i class="fas fa-envelope-open-text"></i>
                     <h4>Email</h4>
-                    <p><a href="mailto:mail@example.com" class="email">mail@example.com</a></p>
+                    <p><a href="mailto:mail@example.com" class="email">sitara@example.com</a></p>
                 </div>
                 <div class="col-lg-3 col-sm-6 contact-info mt-lg-0 mt-4">
                     <i class="fas fa-user-clock"></i>
@@ -139,11 +136,8 @@ Author URL: http://w3layouts.com
             </div>
         </div>
     </section>
-    <!-- map -->
-    <div class="map">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C+UK!5e0!3m2!1sen!2spl!4v1562654563739!5m2!1sen!2spl"
-            width="100%" height="400" frameborder="0" style="border: 0px;" allowfullscreen=""></iframe>
+   
+    
     </div>
     <!-- //contact section -->
 
@@ -156,8 +150,8 @@ Author URL: http://w3layouts.com
                         <h6 class="footer-title-29">Contact Info </h6>
                         <p class="mb-2 pe-xl-5">Address : Dentition, 10001, 5th Avenue, #06 lane street, NY - 62617.
                         </p>
-                        <p class="mb-2">Phone Number : <a href="tel:+1(21) 234 4567">+1(21) 234 4567</a></p>
-                        <p class="mb-2">Email : <a href="mailto:info@example.com">info@example.com</a></p>
+                        <p class="mb-2">Phone Number : <a href="91 8074601255">91 8074601255</a></p>
+                        <p class="mb-2">Email : <a href="mailto:info@example.com">sitara@example.com</a></p>
                     </div>
                     <div class="col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
                         <ul>
@@ -188,9 +182,7 @@ Author URL: http://w3layouts.com
                     </div>
                 </div>
                 <!-- copyright -->
-                <p class="copy-footer-29 text-center pt-lg-2 mt-5 pb-2">© 2021 Dentition. All rights reserved. Design by
-                    <a href="https://w3layouts.com/" target="_blank">
-                        W3Layouts</a></p>
+                <p class="copy-footer-29 text-center pt-lg-2 mt-5 pb-2">© 2022 Dentition. All rights reserved by sitara
                 <!-- //copyright -->
             </div>
         </div>
